--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,59 +1,94 @@
 name: learnobot
-description: An AI-based agent for mediating instructions for struggling students
+description: An AI-based chat application to help students understand instructions.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' 
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
+# A version number is three numbers separated by dots, like 1.2.43
+# followed by an optional build number separated by a +.
+# Both the version and the builder number may be overridden in flutter
+# build by specifying --build-name and --build-number, respectively.
+# In Android, build-name is used as versionName while build-number used as versionCode.
+# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
+# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
+# Read more about iOS versioning at
+# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
 
+# Dependencies specify other packages that your package needs in order to work.
+# To automatically upgrade your package dependencies to the latest versions
+# consider running `flutter pub upgrade --major-versions`.
+# For plugins, consider running `flutter pub global activate pubspec_lock_update` and then `flutter pub global run pubspec_lock_update:update`
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
 
-  # For UI
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  flutter_svg: ^2.0.5
-  google_fonts: ^4.0.4
-  lottie: ^2.3.2
-  flutter_rating_bar: ^4.0.1
   
-  # For functionality 
+  # State management
   provider: ^6.0.5
-  shared_preferences: ^2.1.1
-  http: ^0.13.6
-  camera: ^0.10.5
-  path_provider: ^2.0.15
-  path: ^1.8.3
-  flutter_sound: ^9.2.13
-  permission_handler: ^10.2.0
-  image_picker: ^0.8.7+5
-  intl: 0.19.0
   
-  # Firebase (or can be replaced with your preferred backend)
-  firebase_core: ^2.13.0
-  firebase_auth: ^4.6.1
-  cloud_firestore: ^4.7.1
-  firebase_storage: ^11.2.1
+  # Firebase
+  firebase_core: ^3.8.0 
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.6.8
+  
+  # Storage and preferences
+  shared_preferences: ^2.1.1
+  
+  # Camera and image related
+  image_picker: ^0.8.7+5
+  
+  # Date and time formatting
+  intl: ^0.19.0  # Updated to match Flutter's localization requirement
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
   flutter_lints: ^2.0.1
 
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter packages.
 flutter:
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
   uses-material-design: true
-  
+
+  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/animations/
-    
+    - assets/fonts/
+  
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font.
   fonts:
     - family: Heebo
       fonts:
@@ -62,3 +97,8 @@ flutter:
           weight: 500
         - asset: assets/fonts/Heebo-Bold.ttf
           weight: 700
+        - asset: assets/fonts/Heebo-Light.ttf
+          weight: 300
+  
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
