--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: An AI-based chat application to help students understand instructio
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,29 +33,38 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  
+
   # State management
   provider: ^6.0.5
-  
+
   # Firebase
-  firebase_core: ^3.8.0 
+  firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.6.8
-  
+
   # Storage and preferences
   shared_preferences: ^2.1.1
-  
+
   # Camera and image related
   image_picker: ^0.8.7+5
-  
+
   # Date and time formatting
-  intl: ^0.19.0  # Updated to match Flutter's localization requirement
+  intl: ^0.19.0 # Updated to match Flutter's localization requirement
   google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  excel: ^2.0.5
+  path_provider: ^2.1.1
+
+  llama_cpp_bridge:
+    path: ../llama_cpp_bridge
+
+  sqflite: ^2.3.3
+  path: any
+  http: ^1.2.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -78,7 +87,7 @@ flutter:
     - assets/images/
     - assets/animations/
     - assets/fonts/
-  
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -99,6 +108,6 @@ flutter:
           weight: 700
         - asset: assets/fonts/Heebo-Light.ttf
           weight: 300
-  
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
